# test-fastapi-htmx-sse

./: AGENTS.md  CLAUDE.md  events.py  main.py  models.py  pyproject.toml  test_sse_events.py
static/: app.js  style.css
templates/: base.html  home.html  index.html  task_list.html
