[project]
name = "test-fastapi-htmx-sse"
version = "0.1.0"
description = "Real-time Task Monitor with FastAPI, HTMX, and SSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "uvicorn==0.32.1",
    "psutil==7.0.0",
]
